Add validation for login and password in AuthenticationGeneratorService